--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <form action="https://www.fengshuiasia.online/gold-chat-zoan/" method="get" id="cont_form" class="form-order"> -->
+            <!-- <form action="https://www.fengshuiasia.online/gold-chat-zoan/" target="_blank" method="get" id="cont_form" class="form-order"> -->
             <a href="https://www.fengshuiasia.online/gold-chat-zoan/" id="cont_form" class="form-order">
                 <div class="form_block">
                     <!-- <div class="prices_block">Order form
